# yoz

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: apt-repo.yml  ci.yml  release.yml
packaging/: install.sh
packaging/apt/: KEY.gpg
packaging/winget/: ahadulla.yoz.yaml
src/: buffer.rs  editor.rs  encoding.rs  history.rs  main.rs  selection.rs  terminal.rs  ui.rs
